# dr_back_plugins_buildenv

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  precommit.sh
honeypot/: importme.js  importme.json  importme.privileged.js  importme.privileged.json  importme.privileged.txt  importme.txt
overlay/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
overlay/lib/rules/: no-import-fn.js  no-parent-scope-imports.js
overlay/lib/sdk/: index.ts  package-lock.json  package.json  pluginComms.ts
overlay/lib/sdk/config/: index.ts  json.ts  yaml.ts  yml.ts
overlay/lib/sdk/src/: index.ts  pluginState.ts
overlay/lib/sdk/src/config/: index.ts  json.ts  yaml.ts  yml.ts
overlay/src/: config.yml  dodgyImport.js  index.jsx  index.scss  surveyPlugin.jsx
overlay/src/test/: parentimport.js
src/: builder.rs  main.rs  server.rs  spawner.rs
src/model/: mod.rs
src/model/packet/: build_context.rs  build_queued.rs  build_status.rs  mod.rs
src/test/model/packet/: build_context.json  build_context.rs  build_status.rs  mod.rs
src/utils/: error.rs  fs.rs  mod.rs  mpsc.rs  packet.rs  task.rs
