[package]
name = "dr_plugins_build_env"
version = "0.1.0"
authors = ["matt253657 <matthew.chong@datareachable.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
redis = "^0.19"
mongodb = "^1.1"
tempdir = "^0.3"
tokio = { version = "^1", features = ["full"] }

[profile.release]
opt-level = 3
lto = 'thin'
overflow-checks = true
