[package]
name = "dr_plugins_build_env"
version = "0.1.0"
authors = ["matt253657 <matthew.chong@datareachable.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "^0.3"
tokio = { version = "^1", features = ["full"] }
serde = "^1.0.123"
serde_derive = "^1.0.123"
serde_json = "^1.0.62"
base64 = "^0.13.0"
uuid = { version = "^0.8.2", features = ["std", "v4", "serde"] }
log = "^0.4.14"
env_logger = "^0.8.3"
zip = "^0.5.10"

[profile.release]
opt-level = 3
lto = 'thin'
overflow-checks = true
